--- a/stylesheet.css
+++ b/stylesheet.css
@@ -24,6 +24,42 @@ h1, h2, p {
 }
 
 
+html { overflow-x: hidden; }
+h2 { 
+  background: black;
+  color: white;
+  padding: 15px 0;
+  position: relative;
+}
+h2:before, h2:after {
+  content: "";
+  background: black;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  width: 9999px;
+}
+h2:before {
+  right: 100%;
+}
+h2:after {
+  left: 100%;
+}
+
+h2:nth-of-type(1), h2:nth-of-type(1):before, h2:nth-of-type(1):after { background: #dc4916; }
+h2:nth-of-type(2), h2:nth-of-type(2):before, h2:nth-of-type(2):after { background: #6871b1; }
+h2:nth-of-type(3), h2:nth-of-type(3):before, h2:nth-of-type(3):after { background: #d1b935; }
+
+.left-only:after {
+  display: none;
+}
+
+.right-only:before {
+  width: 20px;
+}
+
+
+
 
 /*img {
 	width:384px;
