MORE FONTS MAKE STASPUPPY HAPPY

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,5 +1,5 @@
 * {
-	font-family: "Comic Sans MS", cursive, sans-serif;
+	font-family: "Curlz MT","Comic Sans MS", cursive, sans-serif;
 	font-size: 1.05em;
 	margin: 0;
 	padding: 0;
